# loongclaw

./: .coderabbit.yaml  .convention-engineering.json  .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-MIT  README.md  README.zh-CN.md  SECURITY.md  Taskfile.yml  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  label_taxonomy.json  labeler.yml
crates/bench/: Cargo.toml
crates/bench/src/: lib.rs  test_support.rs
crates/bench/tests/: bench_integration.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: access_terms.rs  acp_cli.rs  acp_close_runtime.rs  audit_cli.rs  browser_companion_diagnostics.rs  channel_bridge_render.rs  channel_cli_specs.rs  channels_cli.rs  cli_handoff.rs  command_kind.rs  completions_cli.rs  configured_account_keys.rs  control_plane_server.rs  debug_cli.rs  doctor_cli.rs  doctor_compaction_hygiene.rs  doctor_presentation.rs  doctor_security_cli.rs  external_skills_policy_probe.rs  feishu_cli.rs  feishu_onboarding.rs  feishu_support.rs  first_run_action_presentation.rs  import_claw_cli.rs  import_cli.rs  lib.rs  lib_first_run_entry_tests.rs  lib_multi_channel_serve_tests.rs  lib_runtime_snapshot_restore_spec_tests.rs  main.rs  managed_bridge_authoring.rs  managed_plugin_bridge_runtime.rs  memory_context_benchmark.rs  migrate_cli.rs  native_extension_authoring.rs  next_actions.rs  oauth_support.rs  observability.rs  onboard_cli.rs  onboard_cli_tests.rs  (+63 more)
crates/daemon/src/control_plane_server/: mapping.rs  resources.rs  serve.rs  tests.rs  turn.rs
crates/daemon/src/gateway/: api_acp.rs  api_events.rs  api_turn.rs  client.rs  control.rs  mod.rs  openai_compat.rs  read_models.rs  service.rs  state.rs
crates/daemon/src/migration/: discovery.rs  mod.rs  planner.rs  provider_selection.rs  provider_transport.rs  render.rs  types.rs
crates/daemon/src/migration/channels/: feishu.rs  matrix.rs  mod.rs  plugin_bridge.rs  telegram.rs  wecom.rs
crates/daemon/src/mvp/: chat.rs  config.rs  conversation.rs  memory.rs  mod.rs  tools.rs
crates/daemon/src/mvp/channel/: mod.rs  telegram.rs
crates/daemon/src/mvp/channel/feishu/: adapter.rs  mod.rs  payload.rs  webhook.rs
crates/daemon/src/mvp/config/: mod.rs  provider.rs  runtime.rs  shared.rs
crates/daemon/src/mvp/conversation/: mod.rs  orchestrator.rs  persistence.rs  runtime.rs  tests.rs
crates/daemon/src/mvp/memory/: sqlite.rs
crates/daemon/src/mvp/provider/: mod.rs  policy.rs  shape.rs  transport.rs
crates/daemon/src/onboard_cli/: presentation.rs  screens.rs  tests.rs
crates/daemon/src/onboard_tui/: event_source.rs  layout.rs  runner.rs  theme.rs  widgets.rs
crates/daemon/src/onboard_tui/widgets/: progress_spine.rs  selection_card.rs  text_input.rs
crates/daemon/src/runtime_capability_cli/lifecycle/: activate.rs  rollback.rs
crates/daemon/src/tests/: architecture.rs  import_claw_cli.rs  import_cli.rs  migration.rs  mod.rs  onboard_cli.rs  programmatic.rs  skills_cli.rs  spec_runtime.rs  spec_runtime_bridge.rs
crates/daemon/src/tests/spec_runtime_bridge/: process_stdio.rs
crates/daemon/src/web/: chat.rs  dashboard.rs  debug_console.rs  install.rs  mod.rs  onboarding.rs  serve.rs
crates/daemon/src/web_cli/: auth.rs  debug_console.rs  onboarding.rs
crates/daemon/tests/: delegate_async_observability.rs  integration.rs
crates/daemon/tests/integration/: architecture.rs  ask_and_spec_cli_root.rs  ask_cli.rs  channel_plugin_bridge_json.rs  channel_plugin_bridge_text.rs  chat_cli.rs  cli_tests.rs  doctor_feishu.rs  feishu_cli.rs  gateway_api_acp.rs  gateway_api_turn.rs  gateway_nodes.rs  gateway_owner_state.rs  gateway_read_models.rs  import_cli.rs  latest_selector_process_support.rs  managed_bridge_parity.rs  memory_context_benchmark_cli.rs  memory_surfaces.rs  migrate_cli.rs  migration.rs  mod.rs  multi_channel_serve_cli.rs  onboard_cli.rs  personalize_cli.rs  plugins_cli.rs  programmatic.rs  runtime_capability_cli.rs  runtime_experiment_cli.rs  runtime_restore_cli.rs  runtime_snapshot_cli.rs  session_search_cli.rs  sessions_cli.rs  skills_cli.rs  spec_runtime.rs  status_cli.rs  tasks_cli.rs  trajectory_export_cli.rs  tui_pty.rs
crates/daemon/tests/integration/spec_runtime_bridge/: http_json.rs  mod.rs  process_stdio.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: audit.rs  awareness.rs  bootstrap.rs  clock.rs  contracts.rs  errors.rs  kernel.rs  lib.rs  pack.rs  plugin.rs  plugin_ir.rs  policy.rs  test_support.rs  tests.rs  tool.rs
crates/kernel/tests/: kernel_integration.rs
crates/loong-app-protocol/: Cargo.toml
crates/loong-app-protocol/src/: lib.rs
crates/loong-cli/: Cargo.toml
crates/loong-cli/src/: lib.rs
crates/loong-core/: Cargo.toml
crates/loong-core/src/: artifact.rs  budget.rs  error.rs  event.rs  execution.rs  lib.rs  lifecycle.rs  session.rs  task.rs  workspace.rs
crates/loong-core/tests/: kernel_object_model.rs
crates/loong-plugin-sdk/: Cargo.toml
crates/loong-plugin-sdk/src/: lib.rs
crates/loong-runtime/: Cargo.toml
crates/loong-runtime/src/: lib.rs
docs/: AGENT_RISK_MAPPING.md  DESIGN.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  ROADMAP.md  SECURITY.md  TECH_DEBT.md  THREAT_MODEL.md  index.md  layered-kernel-design.md  roadmap.md  versioning-policy.md
examples/: README.md
scripts/: architecture_budget_lib.sh  benchmark_programmatic_pressure.sh  benchmark_wasm_cache.sh  bootstrap_release_local_artifacts.sh  check-docs.sh  check_architecture_boundaries.sh  check_architecture_drift_freshness.sh  check_dep_graph.sh  check_glibc_floor.sh  generate_architecture_drift_report.sh  install.ps1  install.sh  lint_programmatic_pressure_baseline.sh  publish_crates_io.sh  release_artifact_lib.sh  stress_daemon_tests.sh  sync_github_labels.py  test_architecture_budget_scripts.sh  test_bootstrap_release_local_artifacts.sh  test_check_architecture_drift_freshness.sh  test_check_glibc_floor.sh  test_generate_architecture_drift_report.sh  test_install_sh.sh  test_publish_crates_io.sh  test_release_artifact_lib.sh  (+6 more)
site/: docs.json  (+1 more)
(+909 files in other folders)
