[package]
name = "loongclaw-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
loongclaw-spec = { path = "../spec" }
kernel = { package = "loongclaw-kernel", path = "../kernel" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[lints]
workspace = true
