[package]
name = "loongclaw-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
test-support = []

[dependencies]
loongclaw-app = { path = "../app", default-features = false, features = ["memory-sqlite"] }
loongclaw-spec = { path = "../spec" }
kernel = { package = "loongclaw-kernel", path = "../kernel" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
loongclaw-bench = { path = ".", features = ["test-support"] }

[lints]
workspace = true
