[package]
name = "loongclaw-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["mvp"]
mvp = ["channel-cli", "channel-telegram", "channel-feishu", "config-toml", "memory-sqlite", "tool-shell", "tool-file", "provider-openai", "provider-volcengine"]
channel-cli = []
channel-telegram = []
channel-feishu = ["dep:axum", "dep:aes", "dep:cbc"]
provider-openai = []
provider-volcengine = []
config-toml = ["dep:toml"]
memory-sqlite = ["dep:rusqlite"]
tool-shell = []
tool-file = []

[dependencies]
async-trait.workspace = true
clap.workspace = true
kernel = { package = "loongclaw-kernel", path = "../kernel" }
loongclaw-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
toml = { workspace = true, optional = true }
reqwest.workspace = true
futures-util.workspace = true
sha2.workspace = true
tokio.workspace = true
wasmparser.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
wasmtime.workspace = true
rusqlite = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }

[[bin]]
name = "loongclawd"
path = "src/main.rs"

[dev-dependencies]
wat = "1"
