[package]
name = "loongclaw-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1"
tokio.workspace = true
