[package]
name = "loongclaw-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
loongclaw-contracts = { path = "../contracts" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
thiserror.workspace = true

[features]
test-support = []

[dev-dependencies]
loongclaw-kernel = { path = ".", features = ["test-support"] }
proptest = "1"
tokio.workspace = true

[lints]
workspace = true
