[package]
name = "loong-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "First-party CLI shell spine for the additive Loong SDK redesign"
repository.workspace = true
homepage.workspace = true

[lib]
name = "loong_cli"

[dependencies]
loong-app-protocol = { path = "../loong-app-protocol" }
serde.workspace = true

[lints]
workspace = true
