[package]
name = "loong-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Task-centered kernel object model for the additive Loong SDK spine"
repository.workspace = true
homepage.workspace = true

[lib]
name = "loong_core"

[dependencies]
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
