[package]
name = "loong-plugin-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Plugin contract spine for the additive Loong SDK redesign"
repository.workspace = true
homepage.workspace = true

[lib]
name = "loong_plugin_sdk"

[dependencies]
loong-core = { path = "../loong-core" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
