[package]
name = "loong-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Official runtime ownership spine above loong-core"
repository.workspace = true
homepage.workspace = true

[lib]
name = "loong_runtime"

[dependencies]
loong-core = { path = "../loong-core" }
serde.workspace = true
async-trait.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
